# learn2compose

./: .gitignore  .gitmodules  BUILD.txt  CMD.txt  CMakeLists.txt  README.md
scripts/: download.py  extract_sst.py  filter_wordvec.py
scripts/sst/: 5to2.py  extract_lower_sst.py  extract_sst.py  extract_vocab.py  filter_wordvec.py  run.sh  unk_dataset_by_vocab.py
scripts/yelp/: convert_from_tang15.py  extract_label_and_document.py  extract_vocab.py  filter_wordvec.py  ji17_preprocessing.py  lower_and_merge.py  remove_document_splitter_and_label.py  run.sh  sample.py  train_dev_split.py  unk_dataset_by_vocab.py  yang16_preprocessing.py
src/: CMakeLists.txt  alphabet.h  corpus.cc  corpus.h  layer.cc  layer.h  math_utils.cc  math_utils.h  misc.cc  misc.h  model.cc  model.h  reinforce.cc  reinforce.h  snli.cc  snli_corpus.cc  snli_model.cc  snli_model.h  sst.cc  sst_corpus.cc  sst_corpus.h  sst_model.cc  sst_model.h  system.cc  system.h  trainer_utils.cc  trainer_utils.h  treelstm.cc  treelstm.h  yelp.cc  yelp_corpus.cc  yelp_model.cc  yelp_model.h
src/l2c.snli/: CMakeLists.txt  snli.cc  snli_corpus.cc  snli_corpus.h  snli_model.cc  snli_model.h
src/l2c.sst/: CMakeLists.txt  sst.cc  sst_corpus.cc  sst_model.cc  sst_model.h
src/l2c.yelp/: CMakeLists.txt  yelp.cc  yelp_corpus.cc  yelp_corpus.h  yelp_model.cc  yelp_model.h
src/sst/: CMakeLists.txt  evaluate.cc  evaluate.h  sst_corpus.cc  sst_corpus.h  sst_corpus_with_tree.cc  sst_corpus_with_tree.h  sst_model_i.cc  sst_model_i.h
src/sst/ddpg/: CMakeLists.txt  ddpg_sst_model.cc
src/sst/l2c/: CMakeLists.txt  l2c_sst_model.cc  l2c_sst_model.h  main_l2c_sst.cc
src/sst/pg/: CMakeLists.txt  main_pg_sst.cc  pg_sst_model.cc  pg_sst_model.h
src/sst/treelstm/: CMakeLists.txt  main_treelstm_sst.cc  treelstm_sst_model.cc  treelstm_sst_model.h
